# smartcrop-wasm

./: .gitignore  Cargo.toml  README.md
example/: .gitignore  package-lock.json  package.json  tsconfig.json
example/src/: README.md  index.html  index.tsx
example/src/components/: App.tsx  Canvas.tsx  Radio.tsx  Slider.tsx
example/src/hooks/: useSmartCrop.tsx
example/src/types/: smartcrop.d.ts
src/: lib.rs  smartcrop.rs
